Remove the two remaining salted-collection spots in ConstraintGraph
Same pattern and rationale as the prior computeAllBinaryArcConstraints fix:
computeNeighbours' Set.copyOf/Map.copyOf and computeAllBinaryConstraints'
Collectors.toUnmodifiableSet() both build JDK ImmutableCollections, salted
per JVM process. Replaced with Collections.unmodifiableSet/unmodifiableMap
(non-copying wrappers, no salting) plus a plain Collectors.toSet().

Note: this did NOT fully eliminate cross-launch nondeterminism.
LangfordBin-08 (63 restarts) still varies across separate seeded `java`
launches after all three ConstraintGraph fixes -- the next likely source is
Operator/LogicOperator, plain enums with no hashCode() override, so they
inherit Object's identity-based hashCode (not guaranteed stable across JVM
launches), feeding into every constraint class's Lombok-generated
hashCode(). Not pursued further this session -- fixing it would mean
overriding hashCode()/equals() on enums used pervasively across the
constraint hierarchy, a larger and riskier change than anything done here.

Corpus-verified via Xcsp3CompetitionRunner with a corrected per-instance
comparison methodology (the previous word-split awk extraction was
comparing a constant column and silently proved nothing): Crossword-lex-
vg-5-6 flipped UNKNOWN -> SATISFIABLE between the prior commit and this one
-- an improvement, not a regression, now solving within the corpus harness's
5-second budget where it previously timed out.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RHSxjQ811W5RfS1unrxqVj